# toolbox

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
tools/central-sports-web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tools/central-sports-web/.steering/20260424-tentative-schedule/: design.md  requirements.md  tasklist.md
tools/central-sports-web/app/: auth.py  deps.py  lifespan.py  main.py  templating.py
tools/central-sports-web/app/adapters/: hacomono_gateway.py  public_monthly_mapper.py  schedule_mapper.py
tools/central-sports-web/app/domain/: entities.py  errors.py  ports.py
tools/central-sports-web/app/routes/: _shared.py  dashboard.py  debug.py  health.py  intents.py  recurring.py  reserve.py  settings.py  studios.py  sync.py
tools/central-sports-web/app/services/: app_settings_loader.py  booking_intent.py  calendar_query.py  dashboard_query.py  reserve_recurring.py  reserve_single.py  session_warmup.py  settings_view.py  sync_my_reservations.py
tools/central-sports-web/app/utils/: __init__.py  program_similarity.py
tools/central-sports-web/config/: settings.py
tools/central-sports-web/db/: connection.py  migrations.py  schema.py
tools/central-sports-web/mockup/: index.html  reserve-recurring.html  reserve.html
tools/central-sports-web/scheduler/: runtime.py
tools/central-sports-web/scripts/: dump_lesson.py  verify_reservations.py  verify_schedule.py  verify_signin.py  verify_similarity.py
tools/central-sports-web/tests/: conftest.py
(+106 files in other folders)
